# rei-music-downloader

./: Cargo.toml  README.md  codebook.toml
.github/: FUNDING.yml
src/: artist.rs  lyrics.rs  main.rs  song.rs  track.rs  yt_dlp.rs  yt_dlp_cli.rs
