[package]
name = "rei-music-downloader"
version = "0.1.0"
edition = "2024"
description = "A simple youtube music downloader with metadata and lyrics from `lrclib.net`"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Zefirchiky/rei-music-downloader"

[[bin]]
path = "src/main.rs"
name = "music-downloader"

[[bin]]
path = "src/main.rs"
name = "reimd"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
derive_more = { version = "2.1.1", features = ["as_ref", "deref", "deref_mut", "from"] }
filess = { version = "0.6.1", default-features = false, features = ["ogg"] }
indicatif = "0.18.4"
inquire = "0.9.4"
lofty = "0.23.3"
regex = "1.12.3"
reqwest = { version = "0.13.2", features = ["json", "query"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.50.0", features = ["rt", "rt-multi-thread", "parking_lot", "macros"] }
